--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,56 +1,56 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .cursor-pointer {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .nft-plain {
-  background-color: inherit;
+    background-color: inherit;
 }
 
 .matic-6 {
-  display: inline-block;
-  width: 1rem;
-  height: 1rem;
-  stroke-width: 0;
-  stroke: currentColor;
-  fill: currentColor;
-  line-height: 1;
-  position: relative;
-  top: -.1rem;
-  vertical-align: middle;
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    stroke-width: 0;
+    stroke: currentColor;
+    fill: currentColor;
+    line-height: 1;
+    position: relative;
+    top: -0.1rem;
+    vertical-align: middle;
 }
 
 .matic-3 {
-  display: inline-block;
-  width: 2rem;
-  height: 2rem;
-  stroke-width: 0;
-  stroke: currentColor;
-  fill: currentColor;
-  line-height: 1;
-  position: relative;
-  top: -.2rem;
-  vertical-align: middle;
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    stroke-width: 0;
+    stroke: currentColor;
+    fill: currentColor;
+    line-height: 1;
+    position: relative;
+    top: -0.2rem;
+    vertical-align: middle;
 }
 
 .w-md-editor.w-md-editor-show-live {
-  max-width: 96vw;
+    max-width: 96vw;
 }
 
 a#author {
